--- a/Tanks/Config/DefaultInput.ini
+++ b/Tanks/Config/DefaultInput.ini
@@ -39,6 +39,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="QuitFromInGame",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Camera X from Mouse",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="Camera Y from mouse",Key=MouseY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
